# svn2git

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
include/svn2git/: audit_logger.h  author_validator.h  command_runner.h  config_validator.h  content_validator.h  error_reporter.h  git_validator.h  logging.h  revision_mapper.h  rules_validator.h  svn_validator.h
src/: CommandLineParser.cpp  audit_logger.cpp  author_validator.cpp  command_runner.cpp  config_validator.cpp  content_validator.cpp  error_reporter.cpp  git_validator.cpp  logging.cpp  main.cpp  repository.cpp  revision_mapper.cpp  ruleparser.cpp  rules_validator.cpp  svn.cpp  svn_to_git_app.cpp  svn_validator.cpp
test-framework/: .rules  00_START_HERE.txt  IMPLEMENTATION_SUMMARY.md  README.md  authors.txt  config.env  generate_test_data.sh  run_migration.sh  setup_svn_repo.sh  test_svn2git.sh  test_validate_options.sh  validate_migration.sh
tests/: CMakeLists.txt  smoke_test.sh  valgrind_suite.sh
tests/fixtures/: authors.txt  create-test-svn-repo.sh  test.rules
tests/integration/: integration_helpers.h  test_content_validation.cpp  test_full_migration.cpp  test_git_validation.cpp  test_svn_validation.cpp
tests/unit/: test_audit_logger.cpp  test_author_validator.cpp  test_config_validator.cpp  test_content_validator.cpp  test_error_reporter.cpp  test_revision_mapper.cpp  test_rules_validator.cpp  unit_helpers.h
